--- a/Woerterbuch_App/app/src/main/AndroidManifest.xml
+++ b/Woerterbuch_App/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.htw_berlin.woerterbuch_app">
+    package="de.htw_berlin.nguembawrterbuch">
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Woerterbuch_App">
+        android:theme="@style/Theme.NguembaWörterbuch">
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
+            <intent-filter>
+                <action android:name="com.example.user.highlow2.CorrectGuessActivity"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
